--- a/templates/jobs/home.html
+++ b/templates/jobs/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Welcome to JobFly{% endblock %}
+{% block title %}欢迎来到招聘平台{% endblock %}
 
 {% block content %}
 <main>
@@ -158,17 +158,17 @@
         <div class="container">
             <!-- Main Heading -->
             <h1>
-                Discover Your <span>Dream Job</span> with <span>Ease</span>
+                发现你的<span>理想工作</span>，<span>轻松</span>开启职业之旅
             </h1>
             <p>
-                Search through thousands of job opportunities and land the perfect role for your career.
+                从海量职位机会中搜索，为你的职业生涯找到最合适的岗位。
             </p>
 
             <!-- Search Bar -->
             <form method="GET" action="{% url 'jobs:job_list' %}" class="search-bar">
-                <input type="text" name="search" placeholder="Job title or keyword" required>
-                <input type="text" name="location" placeholder="Location" required>
-                <button type="submit">Search</button>
+                <input type="text" name="search" placeholder="职位名称或关键词" required>
+                <input type="text" name="location" placeholder="城市/地区" required>
+                <button type="submit">搜索</button>
             </form>
 
             <!-- Images with Hover Animation -->
